--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>Z:\prog\cs\Snake\</OutputPath>
+  </PropertyGroup>
+
 </Project>
